2004-11-23  S V N Vishwanathan  <vishketan@yahoo.com>

	* shimbun/sb-rediff.el (shimbun-rediff-month-alist): New variable.
	(shimbun-article): Signal an error if the url looks malformed; use
	match-string-no-properties instead of match-string.
	(shimbun-clear-contents): Improve regexps matching tags to be
	removed.
	(shimbun-make-contents): New function to make true Date headers.
	(shimbun-rss-build-message-id): Signal an error if the url string
	is not what is expected; improve the uniqueness of Message-IDs.

2004-11-23  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-wikimedia.el (shimbun-wikimedia-l10n-make-contents):
	Add alternate atmark(@) pattern.
	(shimbun-wikimedia-date-decode-rule-alist): Fix regular expression
	for date string mismatching problem.

2004-11-23  S V N Vishwanathan  <vishketan@yahoo.com>

	* shimbun/sb-rediff.el: New file.

2004-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Break
	continuous lines in editorials.

2004-11-21  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-wikimedia.el: New file.

2004-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-redisplay-this-page): Don't make a new history.

2004-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Break
	continuous lines in editorials.

	* w3m-form.el (w3m-char-to-int, w3m-string-to-char-list,
	w3m-int-to-char): Silence byte-compiler.
	* w3m-ccl.el (charset-id): Ditto.

	* w3m-tabmenu.el (w3m-tab-menubar-update): Don't let iswitchb
	manage the w3m tab menubar.

2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-break-long-japanese-lines): New function.
	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Use it.
	* shimbun/sb-wired.el (shimbun-make-contents): Use it.

2004-10-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-check-refresh-attribute): Support own page reload.
	(w3m-goto-url-with-timer): Ditto.
